--- a/layouts/default.slim
+++ b/layouts/default.slim
@@ -2,6 +2,7 @@ doctype html
 html lang="en"
   head
     meta charset="utf-8"
+    meta name="viewport" content="width=device-width, initial-scale=1.0"
     title
       = "#{@config[:organization]} - #{@item[:title]}"
     link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
