--- a/layouts/default.slim
+++ b/layouts/default.slim
@@ -10,6 +10,11 @@ html lang="en"
     link rel="stylesheet" href="//cdn.auburn.edu/assets/css/default.min.css"
     link rel="stylesheet" href="/assets/style.css"
     meta name="generator" content="nanoc #{Nanoc::VERSION}"
+    link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://www.auburn.edu/template/2013/assets/ico/apple-touch-icon-144-precomposed.png"
+    link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://www.auburn.edu/template/2013/assets/ico/apple-touch-icon-114-precomposed.png"
+    link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://www.auburn.edu/template/2013/assets/ico/apple-touch-icon-72-precomposed.png"
+    link rel="apple-touch-icon-precomposed" href="https://www.auburn.edu/template/2013/assets/ico/apple-touch-icon-57-precomposed.png"
+    link rel="shortcut icon" href="https://www.auburn.edu/template/2013/assets/ico/favicon.png"
   body
     .container
       #top.row.header-wrap
