Fix styling on xs sidebar

--- a/content/assets/style.less
+++ b/content/assets/style.less
@@ -25,6 +25,11 @@
     }
   }
 }
+@media (max-width: 767px) {
+  .sidebar {
+      border: 0px; 
+  }
+}
 .footer-wrap {
   background: url('/assets/footer.png') center 5px no-repeat;
 }
