--- a/layouts/layout.slim
+++ b/layouts/layout.slim
@@ -75,20 +75,12 @@ html lang="en"
             - unless @item.children.empty?
               - unless @item.parent.nil?
                 .orange-bar
-              .blue-header 
-                = @item[:title]
-              - orderedChildren(@item).each do |child|
-                == link_to(child[:title], child)
+              .blue-header= @item[:title]
+              == sidebar_menu @item.children
             - unless @item.parent.nil? || @item.parent.children == [@item]
               .orange-bar
-              .blue-header
-                | Related Pages
-              - for sibling in orderedChildren @item.parent
-                - unless sibling == @item
-                  == link_to(sibling[:title], sibling)
-                - else
-                  span.orange
-                    == link_to("&raquo; #{@item[:title]}", '#', class: "current")
+              .blue-header Related Pages
+              == sidebar_menu @item.parent.children
       .row.footer-wrap.hidden-print
         footer
           section
